// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestPasswordChange component should display confirm page if request was sent successfully 1`] = `
<div
  className="login-container container-fluid"
>
  <div
    className="max-container center row"
  >
    <div
      className="col-centered col-md-6 col-xs-12"
    >
      <div
        className="login-view"
      >
        <div
          className="box-title"
        >
          <span>
            Password change requested
          </span>
        </div>
        <div
          className="box"
        >
          <form
            className="resendPwd"
            method="POST"
          >
            <div
              className="form-group"
            >
              <span>
                We have sent you an email with a temporary connection link. Please use that link to log in and change your password. Make sure to check your spam folder if an email is not in your inbox
              </span>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RequestPasswordChange component should display request password change form if request was not sent 1`] = `
<div
  className="login-container container-fluid"
>
  <div
    className="max-container center row"
  >
    <div
      className="col-centered col-md-6 col-xs-12"
    >
      <div
        className="login-view"
      >
        <div
          className="box-title"
        >
          <span>
            Reset your password
          </span>
        </div>
        <div
          className="box"
        >
          <form
            className="resendPwd"
            onSubmit={[Function]}
          >
            <input
              name="referer"
              type="hidden"
              value="v2"
            />
            <div
              className="margin-m form-group"
            >
              <input
                className="form-control"
                name="identifier"
                onChange={[Function]}
                placeholder="Email or user name"
                required={true}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <button
                className="button-submit button-dark margin-m btn btn-default"
                disabled={true}
                name="send_req_password"
                type="submit"
                value="Send"
              >
                <span>
                  Send
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
